--- a/avabackend/package.json
+++ b/avabackend/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
+    "node": "^20.1.0",
     "nodemon": "^2.0.22"
   }
 }
